fixed text, spacings, added nav menu, font size, little details here and there

--- a/css/bodycontent.css
+++ b/css/bodycontent.css
@@ -18,6 +18,7 @@
 
 .section-desc-dark{
     font-family: 'Karla', sans-serif;
+    font-size: 23px;
 }
 
 .section-title-light{
@@ -37,6 +38,19 @@
 .section-desc-light{
     color: white;
     font-family: 'Karla', sans-serif;
+    font-size: 23px;
+}
+
+.section-container{
+    height: 100%;
+    width: 84%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .section_slant{
@@ -66,13 +80,7 @@
 }
 
 #about-container{
-    height: 100%;
-    width: 84%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+
 }
 
 #about-text-content{
@@ -100,13 +108,7 @@
 }
 
 #skills-container{
-    height: 100%;
-    width: 84%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+
 }
 
 #skills-text-content{
@@ -119,6 +121,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 100px;
 }
 
 .skills-box-order{
@@ -133,9 +136,23 @@
     height: 400px;
     width: 300px;
     margin: 20px;
-    background-color: black;
+    background-color: #111517;
     border-radius: 10px;
+    padding: 15px;
 }
+
+.skills-one-box-title{
+    font-family: 'Fjalla One', sans-serif;
+    color: #00ffc3;
+    font-size: 50px;
+}
+
+.skills-one-box-desc{
+    font-family: 'Karla', sans-serif;
+    color: white;
+    font-size: 23px;
+}
+
 
 /* PROJECTS */
 
@@ -148,13 +165,7 @@
 }
 
 #projects-container{
-    height: 100%;
-    width: 84%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+
 }
 
 #projects-box-content{
@@ -163,6 +174,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 100px;
 }
 
 .projects-box-order{
@@ -191,16 +203,11 @@
     align-items: center;
     background: rgb(255,255,255);
     background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,255,195,1) 100%);
+    overflow: hidden;
 }
 
 #git-container{
-    height: 100%;
-    width: 84%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column !important;
 }
 
 #git-text-content{
