--- a/css/header.css
+++ b/css/header.css
@@ -104,7 +104,7 @@ html, body {
 #landing-small-text{
     font-family: 'Karla', sans-serif;
     color: white;
-    font-size: 2vh;
+    font-size: 2.5vh;
     width: 50vw;
     margin-left: 6px;
 }
@@ -136,4 +136,22 @@ html, body {
     text-align: right;
     color: white;
     font-size: 25px;
+}
+
+#hburger-menu{
+    background-color: #111517;
+    position: fixed;
+    width: 50px;
+    height: 38px;
+    right: 20px;
+    top: 20px;
+    border-radius: 5px;
+}
+
+.hbpos{
+    position: relative;
+    top: 50%;
+    transform: translate(-14%, -46%);
+    text-align: center;
+    outline: none !important;
 }
